# vsix-to-vscodium

./: .gitignore  README.md  main.py  main.sh  test_main.py
code_to_codium/: README.md  pyproject.toml
code_to_codium/code_to_codium/: cli.py
code_to_codium/tests/: test_cli.py
tests/: test_cli.py
vsix-to-codium/: README.md  pyproject.toml
vsix-to-codium/tests/: test_cli.py
vsix-to-codium/vsix_to_codium/: __init__.py  cli.py
vsix_to_vscodium/: __init__.py  cli.py
